Add mobile nav header file to index.html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,39 @@
   <script src="scripts/scripts.js"></script>
 </head>
 <body>
-  <div>heklskdksdklskl</div>
+  <!-- Main header section -->
+
+  <header class="main-header">
+    <nav class="navbar">
+      <div class="logo-container">
+        <div class="logo">
+          <a href="#">YourLogo</a>
+        </div>
+        <div class="hamburger menuacton" id="hamburger">
+          <i class="fa-solid fa-bars" id="menu-icon"></i>
+        </div>
+      </div>
+
+      <div class="nav-links-container">
+        <ul class="nav-links">
+          <li class="nav-menu"><img src="./Assets/Images/Home.png" alt="home" class="nav-img"><a href="#">Home</a></li>
+          <li class="nav-menu"><img src="./Assets/Images/Event.png" alt="home" class="nav-img"><a href="#">Events</a></li>
+          <li class="nav-menu"><img src="./Assets/Images/Speaker.png" alt="home" class="nav-img"><a href="#">Speakers</a></li>
+          <li class="nav-menu"><img src="./Assets/Images/Report.png" alt="home" class="nav-img"><a href="#">Reports</a></li>
+          <li class="nav-menu"><img src="./Assets/Images/Notification.png" alt="home" class="nav-img"><a href="#">Notifications</a></li>
+          <li class="nav-menu"><img src="./Assets/Images/Message.png" alt="home" class="nav-img"><a href="#">Messages</a></li>
+          <li class="nav-menu"><img src="./Assets/Images/Setting.png" alt="home" class="nav-img"><a href="#">Settings</a></li>
+          <div class="dark-mode">
+            <label class="switch">
+              <input type="checkbox">
+              <span class="slider round"></span>
+            </label>
+            <span class="dm-text">Dark mode</span>
+          </div>
+          <li class="nav-menu"><img src="./Assets/Images/User.png" alt="home" class="nav-img"><a href="#">Yemi Olusola</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
 </body>
 </html>
