Add desktop header to index.html file

--- a/index.html
+++ b/index.html
@@ -48,5 +48,37 @@
       </div>
     </nav>
   </header>
+  <header class="lg-main-header" id="mySidenav">
+    <nav class="navbar">
+      <div class="logo-container" id="logo-container">
+        <div class="logo" id="logo">
+          <a href="#">YourLogo</a>
+        </div>
+        <div class="hamburger menuacton" id="menu-icon" onclick="openNav()">
+          <img src="./Assets/Images/hamburger.svg" alt="Menu" id="menu-icon">
+        </div>
+      </div>
+      <!--Desktop nav-->
+      <div class="nav-links-container" id="nav-links-container">
+        <ul class="nav-links" id="nav-links">
+          <li class="nav-menu"><img src="./Assets/Images/Home.png" alt="home" class="nav-img"><a href="#" id="nav-link">Home</a></li>
+          <li class="nav-menu"><img src="./Assets/Images/Event.png" alt="home" class="nav-img"><a href="#" id="nav-link">Events</a></li>
+          <li class="nav-menu"><img src="./Assets/Images/Speaker.png" alt="home" class="nav-img"><a href="#" id="nav-link">Speakers</a></li>
+          <li class="nav-menu"><img src="./Assets/Images/Report.png" alt="home" class="nav-img"><a href="#" id="nav-link">Reports</a></li>
+          <li class="nav-menu"><img src="./Assets/Images/Notification.png" alt="home" class="nav-img"><a href="#" id="nav-link">Notifications</a></li>
+          <li class="nav-menu"><img src="./Assets/Images/Message.png" alt="home" class="nav-img"><a href="#" id="nav-link">Messages</a></li>
+          <li class="nav-menu"><img src="./Assets/Images/Setting.png" alt="home" class="nav-img"><a href="#" id="nav-link">Settings</a></li>
+          <div class="dark-mode">
+            <label class="switch">
+              <input type="checkbox">
+              <span class="slider round"></span>
+            </label>
+            <span class="dm-text">Dark mode</span>
+          </div>
+          <li class="nav-menu"><img src="./Assets/Images/User.png" alt="home" class="nav-img"><a href="#" id="nav-link">Yemi Olusola</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
 </body>
 </html>
