Add stat file to index.html file

--- a/index.html
+++ b/index.html
@@ -80,5 +80,60 @@
       </div>
     </nav>
   </header>
+  <main class="main" id="main">
+    <section class="stats-section">
+      <div class="stats-container">
+        <div class="headlines">
+          <p>Welcome! here’s your summary</p>
+        </div>
+        <div class="stat">
+          <div class="card">
+            <div class="stat-content">
+              <h2>Total Events</h2>
+              <img src="./Assets/Images/info.png" alt="info">
+            </div>
+            <div class="stat-value">
+              <p id="total-event"></p>
+              <p id="total-event-change"></p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="stat-content">
+              <h2>Active Speakers</h2>
+              <img src="./Assets/Images/info.png" alt="info">
+            </div>
+            <div class="stat-value">
+              <p id="in-progress-count">5</p>
+              <p id="active-speaker-change"></p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="stat-content">
+              <h2>Total Registrations</h2>
+              <img src="./Assets/Images/info.png" alt="info">
+            </div>
+            <div class="stat-value">
+              <p>25</p>
+              <p id="registration-change"></p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="stat-content">
+              <h2>Total revenues</h2>
+              <img src="./Assets/Images/info.png" alt="info">
+            </div>
+            <div class="stat-value">
+              <p id="total-revenue"></p>
+              <p id="percentage-change"></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+  </main>
 </body>
 </html>
