Add footer  file to index.html file

--- a/index.html
+++ b/index.html
@@ -335,6 +335,38 @@
       </div>
     </div>
   </main>
+  <div class="bottom-nav" id="bottomNav">
+    <a href="#" class="nav-item">
+      <hr class="indicator">
+      </hr>
+      <img src="./Assets/Images/Home.png" alt="" class="bottom-icon">
+      <span>Home</span>
+    </a>
+    <a href="#" class="nav-item">
+      <hr class="indicator">
+      </hr>
+      <img src="./Assets/Images/Event.png" alt="" class="bottom-icon">
+      <span>Events</span>
+    </a>
+    <a href="#" class="nav-item">
+      <hr class="indicator">
+      </hr>
+      <img src="./Assets/Images/Speaker.png" alt="" class="bottom-icon">
+      <span>Speakers</span>
+    </a>
+    <a href="#" class="nav-item">
+      <hr class="indicator">
+      </hr>
+      <img src="./Assets/Images/Report.png" alt="" class="bottom-icon">
+      <span>Reports</span>
+    </a>
+    <a href="#" class="nav-item">
+      <hr class="indicator">
+      </hr>
+      <img src="./Assets/Images/User.png" alt="" class="bottom-icon">
+      <span>Profile</span>
+    </a>
+  </div>
 </body>
 
 </html>
