Update modal script

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             </strong>
             <p><strong>Date:</strong> <span id="modal-event-date"></span></p>
           </div>
-          <span class="close-button" id="close-button">&times;</span>
+          <span class="close-button" id="close-butto" onclick="onclick()">&times;</span>
         </div>
         <div class="discription">
           <p id="modal-event-description" class="modal-primary-body-text"></p>
