Fix modal error

--- a/index.html
+++ b/index.html
@@ -319,18 +319,16 @@
             </strong>
             <p><strong>Date:</strong> <span id="modal-event-date"></span></p>
           </div>
-          <span class="close-button" id="close-butto" onclick="onclick()">&times;</span>
+          <!-- Updated close button ID -->
+          <span class="close-button" id="close-button">&times;</span>
         </div>
         <div class="discription">
           <p id="modal-event-description" class="modal-primary-body-text"></p>
         </div>
         <div class="modal-speaker">
           <img id="modal-speaker-image" class="card-background-image" src="" alt="Speaker Image" style="width: 100px; height: auto;">
-          <p><strong>Speaker:</strong>
-            <span id="modal-speaker-name"></span>
-          </p>
+          <p><strong>Speaker:</strong> <span id="modal-speaker-name"></span></p>
         </div>
-
         <div class="modal-buttons">
           <button id="edit-button">Edit</button>
           <button id="delete-button">Delete</button>
@@ -338,6 +336,7 @@
         </div>
       </div>
     </div>
+    
   </main>
   <div class="bottom-nav" id="bottomNav">
     <a href="#" class="nav-item">
